# dash_ml

./: .gitignore  LICENSE  README.md  scratch2.py  scratch4.py  setup.cfg
src/dash_ml/: __init__.py  caching.py  ml_app.py  model.py  run_app.py  testfile.csv  utils.py
src/ml_utils/: caching.py  embedding.py  model.py  utils.py
src/ml_utils/apps/: embed_app.py
