[metadata]
name = ml_utils
version = 0.0.1
author = Matt Oster
author_email = matthewoster@gmail.com
description = A dash app for GUI-based training, inferencing, and visualizing various machine learning models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/osterm38/dash_ml.git
project_urls =
    Bug Tracker = https://github.com/osterm38/dash_ml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    click
    dash
    datasets
    fastparquet
    openpyxl
    pandas
    pytorch
    scikit-learn
    transformers
    # umap-learn

# TODO: handle MacOS pytorch issue?
# TODO: handle extras?
[options.packages.find]
where = src

# [options.entry_points]
# console_scripts = 
#     run_ml_apps = ml_utils.apps.run_app:run_app